# BoschAssignment

./: .cursorrules  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DEBUGGING.md  Makefile  README.md  SECURITY.md  mlflow.db  pyproject.toml
.cursor/plans/: phase2_model_layer.plan.md  phase3_training_layer.plan.md
.github/workflows/: cd.yaml  ci.yaml
Data/: biometric_metadata.parquet
Data/40/: desktop.ini
configs/: benchmark.yaml  config.yaml
configs/benchmark/: default.yaml
configs/data/: default.yaml  parallel.yaml
configs/infrastructure/: cluster.yaml  local.yaml
configs/model/: default.yaml
configs/training/: default.yaml
docs/: LEARNING_CHALLENGE.md  LEARNING_CHALLENGE_ANSWERS.md  TECH_STACK.md  architecture.md  benchmark_profile.txt  design_decisions.md  model_port_notes.md  monitoring_training.md  performance_benchmarks.md  phase8_verification.md  scalability_analysis.md  scaling_training.md
infrastructure/: README.md  compose.yaml
infrastructure/docker/: Dockerfile  Dockerfile.dev
infrastructure/helm/biometric-mlops/: .helmignore  Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
infrastructure/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  service.yaml
infrastructure/terraform/: .gitignore  main.tf  outputs.tf  variables.tf  versions.tf
reviews/: phase1_review.md
scripts/: benchmark.py  debug_flow.py  debug_model.py  infer.py  preprocess_cache.py  train.py
src/biometric/: __init__.py
src/biometric/data/: __init__.py  dataset.py  (+5 more)
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_inference_pipeline.py  test_training_loop.py
tests/performance/: __init__.py  test_dataloader_bench.py
tests/unit/: test_arrow_cache.py  test_callbacks.py  test_datamodule.py  test_dataset.py  test_discovery.py  test_logging.py  test_model.py  test_parallel_loader.py  test_parser.py  test_parser_integration.py  test_preprocessing.py  test_registry.py  test_reproducibility.py  test_types.py
(+26 files in other folders)
